get task by id spec
